--- a/src/app/progetti/progetti.component.html
+++ b/src/app/progetti/progetti.component.html
@@ -1,6 +1,6 @@
 <section class="dark">
   <div class="container py-4">
-    <h1 class="h1 text-center" id="pageHeaderTitle">Progetti<span>.</span></h1>
+    <h1 class="h1 text-center" id="pageHeaderTitle">{{"progetti" | translate}}<span>.</span></h1>
 
     <article class="postcard dark blue" data-aos="fade-left" data-aos-duration="2000">
       <a class="postcard__img_link" href="#">
@@ -11,22 +11,19 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">GUZ Viaggi</a></h1>
+        <h1 class="postcard__title blue"><a href="#">{{"card1.cardtitle1" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
-            <i class="fas fa-calendar-alt mr-2"></i>Tue, Sep 12th 2023
+            <i class="fas fa-calendar-alt mr-2"></i>{{"card1.data1" | translate}}
           </time>
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt">
-          Con "GUZ Viaggi", la tua prossima avventura è a portata di clic.
-          Sviluppata con Angular e Java Spring, la piattaforma consente agli
-          utenti di esplorare e prenotare facilmente viaggi emozionanti in tutto
-          il mondo.
+          {{"card1.testocard1" | translate}}
         </div>
         <ul class="postcard__tagbox">
           <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
-            <button class="Btn">
+            <button class="Btn me-4">
               <svg
                 class="svgIcon"
                 viewBox="0 0 496 512"
@@ -38,6 +35,14 @@
                 ></path>
               </svg>
               <span class="text">Github</span>
+            </button>
+          </a>
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svgIcon" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+              </svg>
+              <span class="text">Youtube</span>
             </button>
           </a>
         </ul>
@@ -52,22 +57,19 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title red"><a href="#">Clone di Medium</a></h1>
+        <h1 class="postcard__title red"><a href="#">{{"card2.cardtitle2" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
-            <i class="fas fa-calendar-alt mr-2"></i>Fri, Apr 28th 2023
+            <i class="fas fa-calendar-alt mr-2"></i>{{"card2.data2" | translate}}
           </time>
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt">
-          Benvenuti nel grande progetto Medium Clone! Questo progetto è un clone
-          semplificato del famoso sito di pubblicazione di contenuti Medium.
+          {{"card2.testocard2" | translate}}
         </div>
         <ul class="postcard__tagbox">
-          <a
-            href="https://github.com/Gust4voo/Epicode2023/tree/main/Week5/ProgettoSettimanale04"
-          >
-            <button class="Btn">
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn me-4">
               <svg
                 class="svgIcon"
                 viewBox="0 0 496 512"
@@ -79,6 +81,14 @@
                 ></path>
               </svg>
               <span class="text">Github</span>
+            </button>
+          </a>
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svgIcon" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+              </svg>
+              <span class="text">Youtube</span>
             </button>
           </a>
         </ul>
@@ -93,23 +103,19 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title green"><a href="#">Studenti nel Web</a></h1>
+        <h1 class="postcard__title green"><a href="#">{{"card3.cardtitle3" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
-            <i class="fas fa-calendar-alt mr-2"></i>Fri, May 07th 2023
+            <i class="fas fa-calendar-alt mr-2"></i>{{"card3.data3" | translate}}
           </time>
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt">
-          Benvenuti nel progetto Web Students! Questa è una pagina statica che
-          fornisce informazioni sugli studenti e i corsi relativi alle diverse
-          tecnologie.
+          {{"card3.testocard3" | translate}}
         </div>
         <ul class="postcard__tagbox">
-          <a
-            href="https://github.com/Gust4voo/Epicode2023/tree/main/Week6/day1/ProgettoSettimanale05"
-          >
-            <button class="Btn">
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn me-4">
               <svg
                 class="svgIcon"
                 viewBox="0 0 496 512"
@@ -121,6 +127,14 @@
                 ></path>
               </svg>
               <span class="text">Github</span>
+            </button>
+          </a>
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svgIcon" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+              </svg>
+              <span class="text">Youtube</span>
             </button>
           </a>
         </ul>
@@ -135,21 +149,19 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title yellow"><a href="#">Clone di Spotify</a></h1>
+        <h1 class="postcard__title yellow"><a href="#">{{"card4.cardtitle4" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
-            <i class="fas fa-calendar-alt mr-2"></i>Fri, May 19th 2023
+            <i class="fas fa-calendar-alt mr-2"></i>{{"card4.data4" | translate}}
           </time>
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt">
-          Questo è clone di Spotify creato utilizzando HTML, CSS, Bootstrap e
-          JavaScript. L'obiettivo è ricreare l'esperienza di Spotify in modo
-          piacevole.
+          {{"card4.testocard4" | translate}}
         </div>
         <ul class="postcard__tagbox">
-          <a href="https://github.com/Gust4voo/buildweek2">
-            <button class="Btn">
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn me-4">
               <svg
                 class="svgIcon"
                 viewBox="0 0 496 512"
@@ -161,6 +173,14 @@
                 ></path>
               </svg>
               <span class="text">Github</span>
+            </button>
+          </a>
+          <a href="https://github.com/Gust4voo/CapstoneFinale-Front-end">
+            <button class="Btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svgIcon" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+              </svg>
+              <span class="text">Youtube</span>
             </button>
           </a>
         </ul>
