--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,28 +1,76 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand" href="#">
       <img src="../../assets/img/Logoportfolio.svg" alt="Bootstrap" />
     </a>
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="hambur1">
-      <a class="navLink" routerLink="" routerLinkActive="active">home</a>
+      <a class="navLink" routerLink="" routerLinkActive="active">{{"Home" | translate}}</a>
     </div>
     <div class="hambur2">
       <a class="navLink" routerLink="progetti" routerLinkActive="active"
-        >progetti</a
+        >{{"progetti" | translate}}</a
       >
     </div>
+    <div class="theme-popup">
+      <input type="radio" name="theme" id="default" checked="">
+      <input type="radio" name="theme" id="light">
+      <input type="radio" name="theme" id="dark">
+      <input type="checkbox" id="checkbox">
+    <label for="checkbox" class="theme-popup__button">
+      <span class="theme-popup__icons">
+        <img src="../../assets/img/pngwing.com (1).png" class="flag default" alt="" height="39">
+        <img src="../../assets/img/pngwing.com.png" class="flag sun" alt=""  height="16">
+        <img src="../../assets/img/pngwing.com (3).png" class="flag moon" alt=""  height="16">
+      </span>
+      {{"linguaggi" | translate}}
+    </label>
+    <div class="theme-popup__list-container">
+      <ul class="theme-popup__list">
+        <li (click)="switchLanguage('it')">
+          <label for="default">
+            <span class="theme-popup__icons">
+              <img src="../../assets/img/pngwing.com (1).png" class="flag" alt="" height="39">
+            </span>
+            <span>
+              It
+            </span>
+          </label>
+        </li>
+        <li (click)="switchLanguage('en')">
+          <label for="light">
+            <span class="theme-popup__icons">
+              <img src="../../assets/img/pngwing.com.png" class="flag" alt="" height="33">
+            </span>
+            <span>
+              En
+            </span>
+          </label>
+        </li>
+        <li (click)="switchLanguage('br')">
+          <label for="dark">
+            <span class="theme-popup__icons">
+              <img src="../../assets/img/pngwing.com (3).png" class="flag" alt="" height="39">
+            </span>
+            <span>
+              Br
+            </span>
+          </label>
+        </li>
+      </ul>
+    </div>
+  </div>
   </div>
 </nav>
