--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,9 +31,7 @@
       <input type="checkbox" id="checkbox">
     <label for="checkbox" class="theme-popup__button">
       <span class="theme-popup__icons">
-        <img src="../../assets/img/pngwing.com (1).png" class="flag default" alt="" height="39">
-        <img src="../../assets/img/pngwing.com.png" class="flag sun" alt=""  height="16">
-        <img src="../../assets/img/pngwing.com (3).png" class="flag moon" alt=""  height="16">
+        <i class="bi bi-globe-americas"></i>
       </span>
       {{"linguaggi" | translate}}
     </label>
