--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -38,6 +38,7 @@ img{
     transform: scaleX(1);
 }
 
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
   img{
     width: 110px;
@@ -53,6 +54,7 @@ img{
     position: absolute;
     margin-left: 18rem;
   }
+  
 
   .hambur1, .hambur2{
     padding-left: 1rem;
@@ -76,6 +78,17 @@ img{
     transition: .4s;
     border-radius: 30px;
     margin-top: 7px;
+  }
+
+  .flag{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 40px;
+  }
+
+  .theme-popup {
+   bottom: 95px;
+   margin-left: 16rem;
   }
 
 }
