--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -92,6 +92,12 @@ img{
 
 }
 
+@media screen and (min-width: 375px) and (max-width: 812px) {
+  .theme-popup {
+    bottom: 95px;
+    margin-left: 15.5rem;
+   }
+}
 /* radio settings 👇 */
 
 .theme-popup {
