--- a/src/app/progetti/progetti.component.html
+++ b/src/app/progetti/progetti.component.html
@@ -1,5 +1,5 @@
 <section class="dark">
-  <div class="container py-4" style="overflow-x: hidden">
+  <div class="container py-4">
     <h1 class="h1 text-center" id="pageHeaderTitle">{{"progetti" | translate}}<span>.</span></h1>
 
     <article class="postcard dark blue" data-aos="fade-left" data-aos-duration="2000">
