--- a/src/app/progetti/progetti.component.html
+++ b/src/app/progetti/progetti.component.html
@@ -3,7 +3,7 @@
     <h1 class="h1 text-center" id="pageHeaderTitle">{{"progetti" | translate}}<span>.</span></h1>
 
     <article class="postcard dark blue" data-aos="fade-left" data-aos-duration="2000">
-      <a class="postcard__img_link" href="#">
+      <a class="postcard__img_link">
         <img
           class="postcard__img"
           src="../../assets/img/Yellow and Green Modern Illustration Tour and Travel Agency Logo.png"
@@ -49,7 +49,7 @@
       </div>
     </article>
     <article class="postcard dark red"  data-aos="fade-right" data-aos-duration="2000">
-      <a class="postcard__img_link" href="#">
+      <a class="postcard__img_link">
         <img
           class="postcard__img"
           src="../../assets/img/mediumLogo.png"
@@ -95,7 +95,7 @@
       </div>
     </article>
     <article class="postcard dark green" data-aos="fade-left" data-aos-duration="2000">
-      <a class="postcard__img_link" href="#">
+      <a class="postcard__img_link">
         <img
           class="postcard__img"
           src="../../assets/img/hero-img.png"
@@ -141,7 +141,7 @@
       </div>
     </article>
     <article class="postcard dark yellow" data-aos="fade-right" data-aos-duration="2000">
-      <a class="postcard__img_link" href="#">
+      <a class="postcard__img_link">
         <img
           class="postcard__img"
           src="../../assets/img/Spotify_icon.svg.png"
