--- a/src/app/progetti/progetti.component.html
+++ b/src/app/progetti/progetti.component.html
@@ -11,7 +11,7 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">{{"card1.cardtitle1" | translate}}</a></h1>
+        <h1 class="postcard__title blue"><a>{{"card1.cardtitle1" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
             <i class="fas fa-calendar-alt mr-2"></i>{{"card1.data1" | translate}}
@@ -57,7 +57,7 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title red"><a href="#">{{"card2.cardtitle2" | translate}}</a></h1>
+        <h1 class="postcard__title red"><a>{{"card2.cardtitle2" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
             <i class="fas fa-calendar-alt mr-2"></i>{{"card2.data2" | translate}}
@@ -103,7 +103,7 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title green"><a href="#">{{"card3.cardtitle3" | translate}}</a></h1>
+        <h1 class="postcard__title green"><a>{{"card3.cardtitle3" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
             <i class="fas fa-calendar-alt mr-2"></i>{{"card3.data3" | translate}}
@@ -149,7 +149,7 @@
         />
       </a>
       <div class="postcard__text">
-        <h1 class="postcard__title yellow"><a href="#">{{"card4.cardtitle4" | translate}}</a></h1>
+        <h1 class="postcard__title yellow"><a>{{"card4.cardtitle4" | translate}}</a></h1>
         <div class="postcard__subtitle small">
           <time datetime="2020-05-25 12:00:00">
             <i class="fas fa-calendar-alt mr-2"></i>{{"card4.data4" | translate}}
