--- a/src/app/progetti/progetti.component.html
+++ b/src/app/progetti/progetti.component.html
@@ -190,7 +190,7 @@
       <a class="postcard__img_link">
         <img
           class="postcard__img"
-          src="../../assets/img/Epicode Logo.png"
+          src="../../assets/img/Epicode Logo1.png"
           alt="Image Title"
         />
       </a>
